--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -31,7 +31,7 @@ header {
   height: 96vh;
 }
 
-.ne-znam {
+.sections-container {
   display: flex;
   height: 100%;
 }
@@ -66,7 +66,7 @@ header {
   width: 96%;
   height: 32%;
   margin: 10px;
-  background-color: yellow;
+  background-color: rgb(9, 12, 122);
   // width: 90%;
 }
 button {
