--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -39,7 +39,6 @@ header {
 .call-stack-container {
   height: 100%;
   border-right: 2px solid aquamarine;
-
   flex: 18%;
 }
 
@@ -48,7 +47,7 @@ header {
   border-right: 2px solid aquamarine;
   flex: 18%;
 }
-.right-test {
+.animations-container {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -62,13 +61,14 @@ header {
 }
 
 .horizontal-container {
-  // height: 90%;
+  height: 90%;
   width: 96%;
   height: 32%;
   margin: 10px;
-  background-color: rgb(9, 12, 122);
-  // width: 90%;
+  width: 90%;
+  margin: auto;
 }
+
 button {
   width: 100px;
   height: 40px;
